<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_gray">

        <ImageView
            android:id="@+id/iv_movie_poster"
            android:src="@mipmap/img_not_found_foreground"
            android:layout_width="130dp"
            android:layout_height="160dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/tv_movie_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_view_from_recyclerview_item_default_text"
            app:layout_constraintStart_toEndOf="@id/iv_movie_poster"
            app:layout_constraintTop_toTopOf="@id/iv_movie_poster"
            android:ellipsize="end"
            android:fontFamily="@font/vamp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:maxWidth="190dp"
            android:maxLines="1"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/white" />

        <ImageView
            android:id="@+id/iv_score_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_score"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@id/tv_movie_title"
            app:layout_constraintTop_toTopOf="@id/bt_details"
            app:tint="@color/white" />

        <Button
            android:id="@+id/bt_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="@color/dark_orange"
            android:textAllCaps="false"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:fontFamily="@font/metallord"
            android:textStyle="bold"
            android:text="@string/buttom_details_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_score_movie"
            app:layout_constraintBottom_toBottomOf="parent"

            android:drawableTint="@color/white"
            android:layout_marginBottom="28dp"/>
        <TextView
            android:id="@+id/tv_score_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:text="@string/list_item_score_placeholder"
            app:layout_constraintStart_toStartOf="@id/iv_score_movie"
            app:layout_constraintEnd_toEndOf="@id/iv_score_movie"
            app:layout_constraintTop_toBottomOf="@id/iv_score_movie"
            android:fontFamily="@font/vamp"
            app:layout_constraintBottom_toBottomOf="@id/bt_details"/>





    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>

